--- a/Wax.dll.nuspec
+++ b/Wax.dll.nuspec
@@ -2,8 +2,10 @@
 <package >
   <metadata>
     <id>Wax</id>
+    <title>Wax</title>
+    <summary>Allows you to "unwrap" expression trees, which can help other libraries such as Entity Framework better understand them.</summary>
     <version>0.2.3</version>
-    <authors>mrhmouse</authors>
+    <authors>Jordan Brown</authors>
     <owners>mrhmouse</owners>
     <licenseUrl>http://mit-license.org</licenseUrl>
     <projectUrl>http://mrhmouse.github.io/wax</projectUrl>
