--- a/Wax.dll.nuspec
+++ b/Wax.dll.nuspec
@@ -17,5 +17,6 @@
   </metadata>
   <files>
     <file target="lib/net45" src="Wax.dll" />
+    <file target="lib/net45" src="Wax.xml" />
   </files>
 </package>
