--- a/Wax.dll.nuspec
+++ b/Wax.dll.nuspec
@@ -4,14 +4,14 @@
     <id>Wax</id>
     <title>Wax</title>
     <summary>Allows you to "unwrap" expression trees, which can help other libraries such as Entity Framework better understand them.</summary>
-    <version>0.2.6</version>
+    <version>0.2.7</version>
     <authors>Jordan Brown</authors>
     <owners>mrhmouse</owners>
     <licenseUrl>http://mit-license.org</licenseUrl>
     <projectUrl>http://mrhmouse.github.io/wax</projectUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>Designed to aid in the reuse of Expression trees.</description>
-    <releaseNotes>Recompiled with optimizations.</releaseNotes>
+    <releaseNotes>Minor bugfix for expanding properties</releaseNotes>
     <copyright>Copyright 2014</copyright>
     <tags>Expression Linq Unwrap</tags>
   </metadata>
