Update to version 0.3.0
This version introduces a new feature: the ability to inject constant values
directly into an expression tree.

--- a/Wax.dll.nuspec
+++ b/Wax.dll.nuspec
@@ -4,14 +4,18 @@
     <id>Wax</id>
     <title>Wax</title>
     <summary>Allows you to "unwrap" expression trees, which can help other libraries such as Entity Framework better understand them.</summary>
-    <version>0.2.10</version>
+    <version>0.3.0</version>
     <authors>Jordan Brown</authors>
     <owners>mrhmouse</owners>
     <licenseUrl>http://mit-license.org</licenseUrl>
     <projectUrl>http://mrhmouse.github.io/wax</projectUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>Designed to aid in the reuse of Expression trees.</description>
-    <releaseNotes>Bugfix: implement missing expression types</releaseNotes>
+    <releaseNotes>
+      Added 'Constant' function, allowing users to
+      inject constant values directly into expression
+      trees.
+    </releaseNotes>
     <copyright>Copyright 2014</copyright>
     <tags>Expression Linq Unwrap</tags>
   </metadata>
